--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,11 +16,8 @@
         {{#each burgerData}} {{#unless this.devoured}}
         <li>
           {{this.id}}. {{this.burger_name}}
-
-          <form action="/{{this.id}}?_method=PUT" method="POST">
-            <input type="hidden" name="devoured" value="1">
-            <button class="btn-primary" type="submit">Devour It!</button>
-          </form>
+          <br />
+          <button class="devour btn btn-primary btn-sm" data-id="{{this.id}}">Devour It!</button>
 
         </li>
         {{/unless}} {{/each}}
@@ -48,11 +45,10 @@
 
       <h2>Add A Burger!</h2>
 
-      <form action="/createBurger" method="POST">
-
+      <form class="addBurgerForm">
         <div class="form-group">
           <p>Enter a burger you want to order and click the Submit Order button.</p>
-          <input type="text" id="ca" name="burgerName">
+          <input type="text" id="burgerName" name="burgerName">
         </div>
 
         <button class="btn-primary" type="submit">Submit Order</button>
